--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Problem Tracker</title>
     <meta name="description" content="A sleek DSA problem tracker built with React." />
-
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
